--- a/blue-green.yml
+++ b/blue-green.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+  pull_request:
 
 env:
   AWS_REGION: us-east-1     # Update this to your AWS Region
@@ -22,8 +23,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }} # Use your stored AWS Access Key ID
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }} # Use your stored AWS Secret Access Key
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }} # Use your stored AWS Access Key ID
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} # Use your stored AWS Secret Access Key
           aws-session-token: ${{secrets.AWS_SESSION_TOKEN}}
           aws-region: ${{ env.AWS_REGION }} # Use the region from your environment variables
         
